@@ -1,3 +1,8 @@
+2019-11-09  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/92321
+	* gfortran.dg/matmul_blas_2.f90: New test.
+
 2019-11-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/dec_char_conversion_in_assignment_4.f90: Use
